--- a/Ensemble/PROJECT/TELCO.ipynb
+++ b/Ensemble/PROJECT/TELCO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 233,
    "id": "e5466800",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 234,
    "id": "814f4651",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 235,
    "id": "1105d145",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 236,
    "id": "9aaaae7e",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,18 +441,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 237,
    "id": "19c90b6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5043, 20)"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Drop customerID and Unnamed: 0\n",
-    "df.drop(columns=['customerID', 'Unnamed: 0'], inplace=True)\n"
+    "df.drop(columns=['customerID', 'Unnamed: 0'], inplace=True)\n",
+    "df.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 238,
    "id": "fd3f0e32",
    "metadata": {},
    "outputs": [
@@ -661,7 +673,7 @@
        "4           Electronic check       70.699997  151.64999389648438   True  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 239,
    "id": "eac73ae2",
    "metadata": {},
    "outputs": [
@@ -714,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 240,
    "id": "55566c37",
    "metadata": {},
    "outputs": [
@@ -732,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 241,
    "id": "1e34f52c",
    "metadata": {},
    "outputs": [],
@@ -744,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 242,
    "id": "bf13bb2a",
    "metadata": {},
    "outputs": [],
@@ -769,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 243,
    "id": "48ea6fe2",
    "metadata": {},
    "outputs": [],
@@ -782,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 244,
    "id": "e292a118",
    "metadata": {},
    "outputs": [],
@@ -796,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 245,
    "id": "9249511d",
    "metadata": {},
    "outputs": [
@@ -817,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 246,
    "id": "5a8eecae",
    "metadata": {},
    "outputs": [],
@@ -828,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 247,
    "id": "922c45a6",
    "metadata": {},
    "outputs": [
@@ -849,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 248,
    "id": "e5cd9204",
    "metadata": {},
    "outputs": [],
@@ -862,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 249,
    "id": "542afe93",
    "metadata": {},
    "outputs": [
@@ -896,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 250,
    "id": "2e6f74ae",
    "metadata": {},
    "outputs": [
@@ -930,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 251,
    "id": "a48b9aeb",
    "metadata": {},
    "outputs": [
@@ -939,7 +951,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 2947, number of negative: 2947\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002540 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001293 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 839\n",
       "[LightGBM] [Info] Number of data points in the train set: 5894, number of used features: 19\n",
@@ -970,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 252,
    "id": "885b1145",
    "metadata": {},
    "outputs": [
